--- a/src/main/resources/templates/plogging/plogging-detail.html
+++ b/src/main/resources/templates/plogging/plogging-detail.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>상세정보 페이지</title>
+    <title>플로깅 목록 상세보기</title>
     <link rel="stylesheet" href="../../static/css/product/detail.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <div class="css-b3oum6">
@@ -49,7 +53,7 @@
                                     href="/brands/home?query=%ED%97%AC%EB%A1%9C%EC%9A%B0%EC%8A%AC%EB%A6%BD&amp;affect_type=ProductSaleDetail&amp;affect_id=767440">헬로우슬립</a>
                             </p>
                                 <div class="production-selling-header__title__name-wrap">
-                                        지리산 국립공원 플로깅
+                                    지리산 국립공원 플로깅
                                 </div>
                             </h1>
                             <div class="production-selling-header__content">
@@ -58,7 +62,8 @@
                                         class="production-selling-header__price__separator"></span><div
                                         class="production-selling-header__price__price-value-wrap"><div
                                         class="production-selling-header__price__price"><span
-                                        class="date">2023.06.02</span><span class="end">마감</span></div></div></span></div>
+                                        class="date">2023.06.02</span><span class="end">마감</span></div></div></span>
+                                </div>
                             </div>
                             <div class="production-selling-header__info-wrap"></div>
                             <a class="css-1jw8uh0 e3xbt9p7"
@@ -97,4 +102,5 @@
     </div>
 </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </html>
