--- a/src/main/resources/templates/shopping/coupon-detail.html
+++ b/src/main/resources/templates/shopping/coupon-detail.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>상세정보 페이지</title>
     <link rel="stylesheet" href="../../static/css/product/detail.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<div class="css-b3oum6">
+<div class="wrap">
     <div class="layout">
         <div class="production-selling">
             <div class="production-selling-overview container">
@@ -231,69 +235,6 @@
                                                         alt="상품의 상세 설명 이미지"><img
                                                         src="https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/descriptions/url/168076967959530505.jpg"
                                                         alt="상품의 상세 설명 이미지"></p></div>
-                                            <table class="production-selling-table production-selling-description__information-noti">
-                                                <tbody>
-                                                <tr>
-                                                    <th>제품 소재</th>
-                                                    <td>소재:세미 나노화이바 워싱(폴리에스테르100%)
-                                                        충전재:옥수수식물성추출물FIBER20%+폴리에스테르80%
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>색상</th>
-                                                    <td>
-                                                        화이트,크림아이보리,핑크,버터옐로우,모카브라운,올리브그린,오션블루,라일락,그레이,차콜,캐롯,블러썸,애플민트,딥그린,미드나잇네이비,
-                                                        모카브라운/크림아이보리,캐롯/크림아이보리,올리브그린/크림아이보리,딥그린/버터옐로우,오션블루/크림아이보리
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>치수</th>
-                                                    <td>슈퍼싱글 차렵이불(SS):150x200cm
-                                                        퀸&amp;킹겸용 차렵이불(Q&amp;K):200x220cm
-                                                        베개커버:50x70cm/패브릭 제품 특성상 제작 과정에 따라 ±5cm 오차가 있을 수 있습니다.
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>제품구성</th>
-                                                    <td>슈퍼싱글 이불베개세트(SS이불+베개커버1P)
-                                                        퀸&amp;킹겸용 이불베개세트(Q&amp;K이불+베개커버2P)
-                                                        슈퍼싱글 풀세트(SS이불+SS패드+베개커버1P)
-                                                        퀸&amp;킹겸용 풀세트(Q&amp;K이불+Q패드+베개커버2P)
-                                                        퀸&amp;킹겸용 풀세트(Q&amp;K이불+K패드+베개커버2P)
-                                                        /구성 외 상품은 추가구성에서 별도구매
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>제조자, 수입품의 경우 수입자를 함께 표기</th>
-                                                    <td>헬로우슬립</td>
-                                                </tr>
-                                                <tr>
-                                                    <th>제조국</th>
-                                                    <td>대한민국</td>
-                                                </tr>
-                                                <tr>
-                                                    <th>세탁방법 및 취급시 주의사항</th>
-                                                    <td>상세페이지 참조</td>
-                                                </tr>
-                                                <tr>
-                                                    <th>품질보증기준</th>
-                                                    <td>상세페이지 참조</td>
-                                                </tr>
-                                                <tr>
-                                                    <th>A/S 책임자와 전화번호</th>
-                                                    <td>[ 헬로우슬립 고객센터 ]
-
-                                                        070-8787-8782
-                                                        상담시간 AM 09:00 ~ PM 16:00
-                                                        점심시간 PM 11:30 ~ PM 13:00
-                                                        (주말 및 공휴일 휴무)
-
-                                                        전화 문의가 많아 통화가 지연될 수 있으니 헬로우슬립 Q&amp;A게시판으로 문의내용 적어주시면 빠른 시간내에
-                                                        순차적으로 답변 드리겠습니다.
-                                                    </td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
                                         </div>
                                     </section>
                                 </div>
@@ -306,4 +247,5 @@
     </div>
 </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </html>
