--- a/src/main/resources/static/css/plogging/plogging.css
+++ b/src/main/resources/static/css/plogging/plogging.css
@@ -116,7 +116,6 @@
     color: #757575;
 }
 .button {
-    -moz-user-select: -moz-none;
     -khtml-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -324,7 +323,6 @@
 }
 [role=button], a, button, input[type=button], input[type=reset], input[type=submit] {
     cursor: pointer;
-    -ms-touch-action: manipulation;
     touch-action: manipulation;
 }
 a {
@@ -392,4 +390,12 @@ footer, header, main {
     content: "·";
     color: rgb(117, 117, 117);
     margin: 0px 4px 0px 2px;
+}
+.liactive {
+    background-image: url("../../image/product/location_map_marker_icon.png");
+    background-size: 16px;
+    background-position: left;
+    background-repeat: no-repeat;
+    color: #69c085;
+    padding-left: 6px;
 }
