--- a/src/main/resources/templates/header-footer/header-login.html
+++ b/src/main/resources/templates/header-footer/header-login.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="css-48o8iw" style="height: 100%;"><a class="css-loslz5" style="height :100%;" href="/">
                     <img src="../../static/image/logo.png" class="css-bsbra5" viewBox="0 0 74 30"
-                         style="height: 90%; width: 100%;"
+                         style="height: 55px; width: 100px;"
                     >
 
 
