개많이 했네

--- a/src/main/resources/static/css/mypage/users-edit-password.css
+++ b/src/main/resources/static/css/mypage/users-edit-password.css
@@ -63,10 +63,18 @@
 }
 
 .button--color-blue {
-    background-color: #35c5f0;
-    border-color: #35c5f0;
+    background-color: #7aab9a;
+    border-color: #7aab9a;
     color: #fff;
 }
+
+@media (min-width: 768px) {
+    .button--color-blue:active, .button--color-blue:hover {
+        border-color: #3b7661;
+        background-color: #3b7661;
+    }
+}
+
 
 .update-password__section__title {
     font-weight: 700;
@@ -102,4 +110,24 @@
 .expert-form-group__error>svg {
     margin-right: 4px;
     vertical-align: -5px;
+}
+
+.form-control.focus-visible:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(74, 213, 161, 0.21);
+}
+
+.expert-form-group__input .form-control {
+    font-size: 15px;
+    border-radius: 6px;
+    text-align: center;
+}
+
+.update-password .expert-form-group__input .form-control {
+    text-align: left;
+}
+
+.form-control.focus-visible:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(130, 224, 250, 0.5);
 }
