--- a/src/main/resources/static/css/plogging/plogging-form.css
+++ b/src/main/resources/static/css/plogging/plogging-form.css
@@ -787,6 +787,7 @@ body, html {
     display: flex;
     align-items: flex-start;
     padding: 12px 0px;
+    position: relative;
 }
 
 .css-k7rs7x {
@@ -1253,7 +1254,7 @@ body, html {
 .css-1mes2w3 {
     margin: 3px -3px;
     padding: 0px 3px;
-    color: rgb(204, 204, 204);
+    color: black;
     font-size: 15px;
     font-weight: normal;
     line-height: 28px;
@@ -1340,6 +1341,7 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
     position: relative;
     display: block;
     width: 100%;
+    cursor: pointer;
 }
 
 .css-1d2rxna .form-control {
@@ -1397,11 +1399,259 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
     border-radius: 4px;
 }
 
+.animated-popout.open.open.open {
+    visibility: visible;
+    opacity: 1;
+    transform: none;
+    transition: opacity .2s,transform .2s;
+    transform-origin: 50% 0;
+    box-sizing: border-box;
+}
+
+.popout--axis-1.popout--dir-2 .panel-drop-down__content {
+    margin-top: 17px;
+}
+
+.drop-down__content {
+    z-index: 1000;
+}
+
+.panel-drop-down__content {
+    position: relative;
+}
+
+.animated-popout.open-active {
+    pointer-events: auto;
+}
+
+.drop-down-panel {
+    margin: 0 -1px;
+    box-sizing: border-box;
+    background-color: #fff;
+    box-shadow: 0 -1px 16px rgba(0,0,0,.2);
+    border-radius: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.panel-entry-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.drop-down-panel .panel-entry-list {
+    position: relative;
+    width: 200px;
+    min-height: 50px;
+}
+.drop-down-panel>.panel-entry-list {
+    max-height: 425px;
+    overflow: auto;
+}
 
 
+.panel-entry-list__item {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.panel-entry-list__item {
+    display: block;
+    position: relative;
+    width: 100%;
+    margin: 0;
+    padding: 15px;
+    box-sizing: border-box;
+    border: none;
+    background: #fff;
+    color: #424242;
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 30px;
+    text-decoration: none;
+    text-align: left;
+    cursor: pointer;
+}
+
+.panel-entry-list__item.selected {
+    color: #35c5f0;
+    font-weight: 700;
+}
+
+.panel-entry-list__item__header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    justify-content: space-between;
+}
+.panel-entry-list__item__right, .panel-entry-list__item__title {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
+    word-break: break-all;
+    line-height: 20px;
+}
+.panel-entry-list__item__title {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -moz-box-flex: 0;
+    -moz-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+}
+.panel-entry-list__item {
+    display: block;
+    position: relative;
+    width: 100%;
+    margin: 0;
+    padding: 15px;
+    box-sizing: border-box;
+    border: none;
+    background: #fff;
+    color: #424242;
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 30px;
+    text-decoration: none;
+    text-align: left;
+    cursor: pointer;
+}
+
+@media (min-width: 768px) {
+    .panel-entry-list__item.hovered, .panel-entry-list__item:active, .panel-entry-list__item:focus, .panel-entry-list__item:hover {
+        background-color: #effbff;
+    }
+}
+.panel-entry-list__item.show-caret .panel-entry-list__item__header {
+    padding-right: 25px;
+}
+.panel-entry-list__item__right, .panel-entry-list__item__title {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
+    word-break: break-all;
+    line-height: 20px;
+}
+.panel-entry-list__item__title {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -moz-box-flex: 0;
+    -moz-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+}
+.panel-entry-list__item.show-caret .panel-entry-list__item__header>.caret {
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
 
+.popout--axis-1.popout--dir-2 .panel-drop-down__content:after {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 20px;
+    border-style: solid;
+    top: -8px;
+    margin: 0 1px;
+    border-width: 0 9px 9px;
+    border-color: transparent transparent #fff;
+}
 
 
+.popout--axis-1.popout--dir-2.popout--cross-dir-0 .panel-drop-down__content:after {
+    left: 20px;
+}
+
+button{
+    cursor: pointer;
+}
+
+input,select {
+    outline: none;
+}
 
 
+.content{
+    outline: none;
+    border: none;
+    resize: none;
+    height: 500px;
+}
+
+.css-1y8go0x {
+    position: absolute;
+    right: -79px;
+    top: 29px;
+    display: inline-block;
+    margin: 0px;
+    padding: 0px;
+    line-height: 0;
+    color: rgb(255, 255, 255);
+    background-color: white;
+    border-radius: 100%;
+    transition: background-color 0.1s ease 0s;
+    border: none;
+}
+
+@media (min-width: 768px) {
+    .css-1y8go0x {
+        box-shadow: rgba(63, 71, 77, 0.05) 0px 2px 5px 0px;
+        border: 1px solid rgba(0, 0, 0, 0.08);
+        padding: 17px;
+    }
+}
+@media (min-width: 768px) {
+    .css-1y8go0x:hover, .css-1y8go0x:active {
+        background-color: rgb(247, 249, 250);
+    }
+}
+
+.delete-image-btn{
+    top: 100px;
+
+}
+
+
+.css-1xdtfyo > .icon {
+    vertical-align: -7px;
+}
+
+.popout--prepared{
+    position: absolute;
+    z-index: 1000;
+    left: 369px;
+    top: 63px;
+}
+
+.big-location-box {
+
+    left: 169px;
+    top: 46px;
+}
