--- a/src/main/resources/templates/shopping/coupon-list.html
+++ b/src/main/resources/templates/shopping/coupon-list.html
@@ -6,113 +6,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품 목록</title>
     <link rel="stylesheet" href="../../static/css/product/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
-          rel="stylesheet">
+    <link rel="stylesheet" href="../../static/css/font.css">
     <style>
-        .wrap {
+        .css-b3oum6 {
             max-width: 1256px;
             margin: 0 auto;
         }
+
+        div.ecxk4430 {
+            font-size: 20px;
+            justify-content: space-between;
+            margin-right: 2.5rem;
+        }
     </style>
 </head>
-
 <body>
 <div class="css-b3oum6">
     <div class="layout">
-        <div id="store-index">
+        <div id="store-index" style="text-align: justify-all; font-size: 16px; font-weight: bold">
             <nav class="css-1qvkor6 ews609u1">
-                <ul class="css-1norycs ews609u0">
-                    <li class="css-1ks8qr6 ecxk4434"><a
-                            href="">
+                <ul class="css-1norycs ews609u0" style="">
+                    <li class="css-1ks8qr6 ecxk4434"><a href="#">
                         <div class="css-ivqtox ecxk4430"><span>전국</span></div>
                     </a></li>
-                    <li class="css-1ks8qr6 ecxk4434"><a
-                            href=" ">
+                    <li class="css-1ks8qr6 ecxk4434"><a href="#">
                         <div class="css-ivqtox ecxk4430"><span>서울/경기도</span></div>
                     </a></li>
-                    <li class="css-1ks8qr6 ecxk4434"><a
-                            href=" ">
+                    <li class="css-1ks8qr6 ecxk4434"><a href="#">
                         <div class="css-ivqtox ecxk4430"><span>충청북도</span></div>
                     </a></li>
                     <li class="css-1ks8qr6 ecxk4434"><a
-                            href=" ">
+                            href="#">
                         <div class="css-ivqtox ecxk4430"><span>충청남도</span></div>
                     </a></li>
                     <li class="css-1ks8qr6 ecxk4434"><a
-                            href=" ">
+                            href="#">
                         <div class="css-ivqtox ecxk4430"><span>전라북도</span></div>
                     </a></li>
                     <li class="css-1ks8qr6 ecxk4434"><a
-                            href=" ">
+                            href="#">
                         <div class="css-ivqtox ecxk4430"><span>전라남도</span></div>
                     </a></li>
                     <li class="css-1ks8qr6 ecxk4434"><a
-                            href=" ">
+                            href="#">
                         <div class="css-ivqtox ecxk4430"><span>경상북도</span></div>
                     </a></li>
                     <li class="css-1ks8qr6 ecxk4434"><a
-                            href=" ">
+                            href="#">
                         <div class="css-ivqtox ecxk4430"><span>경상남도</span></div>
                     </a></li>
                     <li class="css-1ks8qr6 ecxk4434"><a
-                            href=" ">
+                            href="#">
                         <div class="css-ivqtox ecxk4430"><span>제주도</span></div>
                     </a></li>
                 </ul>
             </nav>
             <hr>
             <section class="container store-index-section store-index-category-list">
-                <h1 class="store-index-category-list__title">카테고리</h1>
-                <div class="category-list-wrap">
+                <h1 class="store-index-category-list__title" style="margin-left: 15px; font-weight: 700">카테고리</h1>
+                <div class="category-list-wrap" style="margin-top: 1.2rem">
                     <div class="category-list fold" style="transition-duration: 0ms; transform: translateX(0%);">
                         <div class="category-item-wrap"><a
-                                href=" ">
+                                href="#">
                             <div class="category-item"><img class="category-item__image"
-                                                            src=" ">
-                                <div class="category-item__title">인기</div>
+                                                            src="../../static/image/product/hot.png">
+                                <div class="category-item__title">전체</div>
                             </div>
                         </a></div>
                         <div class="category-item-wrap"><a
-                                href=" ">
+                                href="#">
                             <div class="category-item"><img class="category-item__image"
-                                                            src=" ">
+                                                            src=" ../../static/image/product/cafe.png">
                                 <div class="category-item__title">카페</div>
                             </div>
                         </a></div>
                         <div class="category-item-wrap"><a
-                                href=" ">
+                                href="#">
                             <div class="category-item"><img class="category-item__image"
-                                                            src=" ">
+                                                            src="../../static/image/product/spoon.png">
                                 <div class="category-item__title">외식 상품권</div>
                             </div>
                         </a></div>
                         <div class="category-item-wrap"><a
-                                href=" ">
+                                href="#">
                             <div class="category-item"><img class="category-item__image"
-                                                            src=" ">
+                                                            src="../../static/image/product/store.png">
                                 <div class="category-item__title">편의점</div>
                             </div>
                         </a></div>
                         <div class="category-item-wrap"><a
-                                href=" ">
+                                href="#">
                             <div class="category-item"><img class="category-item__image"
-                                                            src=" ">
-                                <div class="category-item__title">할인 쿠폰</div>
+                                                            src="../../static/image/product/sale.png">
+                                <div class="category-item__title">음...</div>
                             </div>
                         </a></div>
                         <div class="category-item-wrap"><a
-                                href=" ">
+                                href="#">
                             <div class="category-item"><img class="category-item__image"
-                                                            src=" ">
+                                                            src="../../static/image/product/beauty.png">
                                 <div class="category-item__title">뷰티</div>
                             </div>
                         </a></div>
                         <div class="category-item-wrap"><a
-                                href=" ">
+                                href="#">
                             <div class="category-item"><img class="category-item__image"
-                                                            src=" ">
+                                                            src="../../static/image/product/lifestyle.png">
                                 <div class="category-item__title">생활용품</div>
                             </div>
                         </a></div>
