--- a/src/main/resources/templates/shopping/coupon-detail.html
+++ b/src/main/resources/templates/shopping/coupon-detail.html
@@ -2,12 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>상세정보 페이지</title>
+    <title>제품 상세정보 페이지</title>
     <link rel="stylesheet" href="../../static/css/product/detail.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
-          rel="stylesheet">
+    <link rel="stylesheet" href="../../static/css/font.css">
 </head>
 <body>
 <div class="wrap">
@@ -47,13 +44,25 @@
                     </div>
                     <div class="production-selling-overview__content col-12 col-md-6 col-lg-5">
                         <div class="production-selling-header">
-                            <h1 class="production-selling-header__title"><p
-                                    class="production-selling-header__title__brand-wrap"><a
-                                    class="production-selling-header__title__brand"
-                                    href="/brands/home?query=%ED%97%AC%EB%A1%9C%EC%9A%B0%EC%8A%AC%EB%A6%BD&amp;affect_type=ProductSaleDetail&amp;affect_id=767440">헬로우슬립</a>
-                            </p>
+                            <h1 class="production-selling-header__title">
+                                <p style="margin-bottom: 1rem"
+                                        class="production-selling-header__title__brand-wrap"><a
+                                        class="production-selling-header__title__brand"
+                                        href="#">
+                                    헬로우슬립</a>
+                                    <button class="production-selling-header__action__button production-selling-header__action__button-scrap"
+                                            style="border: none; background-color: transparent; color: #6e6e6e; position: absolute; right: 4px;"
+                                            type="button">
+                                        <svg class="icon--stroke" aria-label="스크랩" width="24" height="24"
+                                             fill="currentColor" stroke="currentColor" stroke-width="0.5"
+                                             viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet">
+                                            <path d="M11.53 18.54l-8.06 4.31A1 1 0 0 1 2 21.97V3.5A1.5 1.5 0 0 1 3.5 2h17A1.5 1.5 0 0 1 22 3.5v18.47a1 1 0 0 1-1.47.88l-8.06-4.31a1 1 0 0 0-.94 0z"></path>
+                                        </svg>
+                                        <span class="count"></span></button>
+                                </p>
                                 <div class="production-selling-header__title__name-wrap">
                                     [오늘의딜][10%쿠폰] 부드러운 카스테라 항균 옥수수솜 여름/간절기/사계절 차렵이불세트
+
                                 </div>
                             </h1>
                             <div class="production-selling-header__content">
@@ -90,7 +99,7 @@
                                 class="css-q02jxk ejhg2ki0"><span>0</span>원</span></p>
                             <div class="production-selling-option-form__footer">
                                 <button class="button button--color-blue button--size-55 button--shape-4" type="button">
-                                    바로구매
+                                    교환하기
                                 </button>
                             </div>
                         </div>
@@ -248,4 +257,21 @@
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    $bookmark = $("svg.icon--stroke");
+    $bookmark.on("click", function () {
+        if($(this).hasClass("check")){
+            $(this).removeClass("check");
+            $(this).css({
+                "fill": "transparent"
+            });
+        }else {
+            $(this).addClass("check");
+            $(this).css({
+                "fill":"#69c085"
+            });
+
+        }
+    })
+</script>
 </html>
